--- a/Wizipedia/Views/Base.lproj/Main.storyboard
+++ b/Wizipedia/Views/Base.lproj/Main.storyboard
@@ -342,6 +342,10 @@
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="9SO-PY-81R">
+                                        <rect key="frame" x="8" y="0.0" width="385" height="580"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    </activityIndicatorView>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
@@ -373,13 +377,15 @@
                     </view>
                     <navigationItem key="navigationItem" id="wx7-RN-eAH"/>
                     <connections>
+                        <outlet property="activityIndicator" destination="9SO-PY-81R" id="v5C-ts-bhQ"/>
                         <outlet property="wizardBasicInfoLabel" destination="box-GF-KQB" id="shr-8m-Mn6"/>
                         <outlet property="wizardImageView" destination="LT3-g7-T1X" id="4Wr-cw-BA5"/>
+                        <outlet property="wizardSpellInfoLabel" destination="xc8-vX-ov3" id="F7y-OI-eAW"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="N4B-Mi-bPP" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1178" y="-620"/>
+            <point key="canvasLocation" x="1177.8625954198474" y="-620.42253521126759"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="C8w-6H-z1q">
@@ -406,40 +412,40 @@
         <image name="sections-icons/shield" width="800" height="800"/>
         <image name="sections-icons/spells" width="800" height="800"/>
         <namedColor name="sections-colors/charcters/1st-color">
-            <color red="0.67968970537185669" green="0.35247373580932617" blue="0.35247373580932617" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.67843137254901964" green="0.34901960784313724" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="sections-colors/charcters/2nd-color">
-            <color red="0.51423174142837524" green="0.26901525259017944" blue="0.26901525259017944" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.51372549019607838" green="0.26666666666666666" blue="0.26666666666666666" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="sections-colors/charcters/3rd-color">
-            <color red="0.29458889365196228" green="0.16618570685386658" blue="0.16618570685386658" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.29411764705882354" green="0.16470588235294117" blue="0.16470588235294117" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="sections-colors/houses/1st-color">
-            <color red="0.41164517402648926" green="0.56062781810760498" blue="0.50596922636032104" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.40784313725490196" green="0.55686274509803924" blue="0.50588235294117645" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="sections-colors/houses/2nd-color">
-            <color red="0.32507580518722534" green="0.45234030485153198" blue="0.40619978308677673" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.32156862745098042" green="0.45098039215686275" blue="0.40392156862745099" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="sections-colors/houses/3rd-color">
-            <color red="0.22973513603210449" green="0.33218097686767578" blue="0.30255380272865295" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.22745098039215686" green="0.32941176470588235" blue="0.30196078431372547" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="sections-colors/media/1st-color">
             <color red="0.41568627450980394" green="0.35294117647058826" blue="0.13333333333333333" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="sections-colors/media/2nd-color">
-            <color red="0.52631938457489014" green="0.48452919721603394" blue="0.31027776002883911" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.52549019607843139" green="0.4823529411764706" blue="0.30980392156862746" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="sections-colors/media/3rd-color">
-            <color red="0.36525210738182068" green="0.3391081690788269" blue="0.20689573884010315" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.36470588235294116" green="0.33725490196078434" blue="0.20392156862745098" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="sections-colors/spells/1st-color">
-            <color red="0.40066289901733398" green="0.46182459592819214" blue="0.55694800615310669" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.40000000000000002" green="0.45882352941176469" blue="0.55686274509803924" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="sections-colors/spells/2nd-color">
-            <color red="0.31027776002883911" green="0.36525210738182068" blue="0.46182459592819214" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.30980392156862746" green="0.36470588235294116" blue="0.45882352941176469" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="sections-colors/spells/3rd-color">
-            <color red="0.21864914894104004" green="0.26901525259017944" blue="0.36525210738182068" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.21568627450980393" green="0.26666666666666666" blue="0.36470588235294116" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <systemColor name="secondaryLabelColor">
             <color red="0.23529411759999999" green="0.23529411759999999" blue="0.26274509800000001" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
